[project]
name = "rlwot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josephyu", email = "josephyu@tencent.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hf-transfer>=0.1.9",
    "vllm>=0.12.0",
]

[project.scripts]
rlwot = "rlwot:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
