[project]
name = "rlwot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josephyu", email = "josephyu@tencent.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hf-transfer>=0.1.9",
    "vllm>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
    "datasets>=4.4.1",
    "uuid7>=0.1.0",
    "tqdm>=4.67.1",
]

[project.scripts]
rlwot = "rlwot:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
