[project]
name = "rlwot"
version = "0.1.0"
description = "Reinforcement Learning with Optimization Techniques"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "ray>=2.52.1",
    "swanlab>=0.7.4",
    "vllm>=0.12.0",
]

[project.scripts]
rlwot_es_naive = "rlwot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
